@@ -73,67 +73,68 @@
         <java.version>25</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
-        <aether.version>0.9.0.M2</aether.version>
+        <aether.version>1.1.0</aether.version>
         <apache.curator.version>5.9.0</apache.curator.version>
         <apache.kafka.version>4.3.0</apache.kafka.version>
         <!-- when updating apache ranger, verify the usage of aws-bundle-sdk vs aws-logs-sdk
         and update as needed in extensions-contrib/druid-ranger-security/pom.xml  -->
-        <apache.ranger.version>2.8.0</apache.ranger.version>
-        <antlr4.version>4.5.3</antlr4.version>
-        <gson.version>2.13.2</gson.version>
+        <apache.ranger.version>2.9.0</apache.ranger.version>
+        <antlr4.version>4.13.2</antlr4.version>
+        <gson.version>2.14.0</gson.version>
         <scala.library.version>2.13.16</scala.library.version>
         <avatica.version>1.28.0</avatica.version>
-        <avro.version>1.12.0</avro.version>
-        <parquet.version>1.16.0</parquet.version>
-        <bytebuddy.version>1.18.5</bytebuddy.version>
+        <avro.version>1.12.1</avro.version>
+        <parquet.version>1.17.1</parquet.version>
+        <bytebuddy.version>1.18.11</bytebuddy.version>
         <!--
             The base calcite parser was copied into the project; when updating Calcite run dev/upgrade-calcite-parser to adopt upstream changes
           -->
-        <calcite.version>1.37.0</calcite.version>
-        <confluent.version>6.2.15</confluent.version>
-        <cronutils.version>9.2.0</cronutils.version>
+        <calcite.version>1.41.0</calcite.version>
+        <confluent.version>8.3.1</confluent.version>
+        <cronutils.version>9.2.1</cronutils.version>
         <datasketches.version>4.2.0</datasketches.version>
         <datasketches.memory.version>2.2.0</datasketches.memory.version>
         <derby.version>10.17.1.0</derby.version>
-        <dropwizard.metrics.version>4.2.22</dropwizard.metrics.version>
+        <dropwizard.metrics.version>4.2.39</dropwizard.metrics.version>
+        <errorprone.annotations.version>2.50.0</errorprone.annotations.version>
         <errorprone.version>2.49.0</errorprone.version>
-        <fabric8.version>7.6.0</fabric8.version>
+        <fabric8.version>7.8.0</fabric8.version>
         <fastutil.version>8.5.4</fastutil.version>
         <guava.version>32.1.3-jre</guava.version>
         <guice.version>6.0.0</guice.version>
         <hamcrest.version>3.0</hamcrest.version>
         <iceberg.core.version>1.10.0</iceberg.core.version>
-        <jetty.version>12.1.11</jetty.version>
+        <jetty.version>12.1.12</jetty.version>
         <jersey.version>1.19.4</jersey.version>
-        <jackson.version>2.21.4</jackson.version>
+        <jackson.version>2.22.1</jackson.version>
         <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
-        <log4j.version>2.26.0</log4j.version>
-        <mysql.version>8.2.0</mysql.version>
+        <log4j.version>2.26.1</log4j.version>
+        <mysql.version>26.7.0</mysql.version>
         <mariadb.version>2.7.3</mariadb.version>
         <netty3.version>3.10.6.Final</netty3.version>
-        <netty4.version>4.2.15.Final</netty4.version>
+        <netty4.version>4.2.16.Final</netty4.version>
         <postgresql.version>42.7.12</postgresql.version>
         <protobuf.version>4.35.1</protobuf.version>
         <resilience4j.version>1.3.1</resilience4j.version>
         <slf4j.version>2.0.18</slf4j.version>
-        <jna.version>5.18.1</jna.version>
+        <jna.version>5.19.1</jna.version>
         <jna-platform.version>5.18.1</jna-platform.version>
         <hadoop.compile.version>3.5.0</hadoop.compile.version>
-        <graaljs.version>22.3.5</graaljs.version>
+        <graaljs.version>25.1.3</graaljs.version>
         <mockito.version>5.23.0</mockito.version>
         <!-- AWS SDK v1 is still used as a transitive dependency by Hadoop and Ranger extensions.
              It should be removed once those extensions are upgraded or dropped (see #19109). -->
         <aws.sdk.v1.version>1.12.793</aws.sdk.v1.version>
-        <aws.sdk.v2.version>2.49.6</aws.sdk.v2.version>
+        <aws.sdk.v2.version>2.51.3</aws.sdk.v2.version>
         <caffeine.version>3.2.4</caffeine.version>
         <jacoco.version>0.8.14</jacoco.version>
-        <testcontainers.version>2.0.3</testcontainers.version>
+        <testcontainers.version>2.0.5</testcontainers.version>
         <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <okhttp.version>5.3.2</okhttp.version>
+        <httpclient.version>4.5.14</httpclient.version>
+        <okhttp.version>5.4.0</okhttp.version>
         <kubernetes.client.version>25.0.0-legacy</kubernetes.client.version>
         <zookeeper.version>3.8.6</zookeeper.version>
-        <checkerframework.version>3.49.2</checkerframework.version>
+        <checkerframework.version>4.2.2</checkerframework.version>
         <com.google.apis.client.version>2.2.0</com.google.apis.client.version>
         <com.google.http.client.apis.version>1.42.3</com.google.http.client.apis.version>
         <com.google.apis.compute.version>v1-rev20230606-2.0.0</com.google.apis.compute.version>
@@ -168,7 +169,6 @@
             <!-- required for SIMD for druid.expressions.useVectorApi -->
             --add-modules=jdk.incubator.vector
         </jdk.strong.encapsulation.argLine>
-        <jdk.security.manager.allow.argLine><!-- empty placeholder --></jdk.security.manager.allow.argLine>
         <repoOrgId>maven.org</repoOrgId>
         <repoOrgName>Maven Central Repository</repoOrgName>
         <repoOrgUrl>https://repo.maven.apache.org/maven2/</repoOrgUrl>
@@ -328,7 +328,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.21.0</version>
+                <version>2.22.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-logging</groupId>
@@ -343,7 +343,7 @@
            <dependency>
                <groupId>commons-net</groupId>
                <artifactId>commons-net</artifactId>
-               <version>3.9.0</version>
+               <version>3.13.0</version>
            </dependency>
           <dependency>
               <groupId>com.github.seancfoley</groupId>
@@ -413,12 +413,12 @@
             <dependency>
                 <groupId>com.ning</groupId>
                 <artifactId>compress-lzf</artifactId>
-                <version>1.0.4</version>
+                <version>1.2.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.rvesse</groupId>
                 <artifactId>airline</artifactId>
-                <version>2.8.4</version>
+                <version>3.3.0</version>
             </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
@@ -428,7 +428,7 @@
             <dependency>
                 <groupId>net.minidev</groupId>
                 <artifactId>json-smart</artifactId>
-                <version>2.5.2</version>
+                <version>2.6.0</version>
             </dependency>
 
             <!-- transitive dependency of kafka-clients and kubernetes client
@@ -497,7 +497,12 @@
             <dependency>
                 <groupId>com.squareup.okio</groupId>
                 <artifactId>okio</artifactId>
-                <version>3.16.4</version>
+                <version>3.18.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okio</groupId>
+                <artifactId>okio-jvm</artifactId>
+                <version>3.18.1</version>
             </dependency>
             <dependency>
                 <groupId>redis.clients</groupId>
@@ -507,7 +512,7 @@
             <dependency>
                 <groupId>com.github.fppt</groupId>
                 <artifactId>jedis-mock</artifactId>
-                <version>1.1.12</version>
+                <version>1.1.17</version>
             </dependency>
             <dependency>
               <groupId>io.kubernetes</groupId>
@@ -636,7 +641,7 @@
             <dependency>
                 <groupId>org.apache.hive</groupId>
                 <artifactId>hive-storage-api</artifactId>
-                <version>2.8.1</version>
+                <version>4.2.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -667,7 +672,7 @@
             <dependency>
                 <groupId>com.google.errorprone</groupId>
                 <artifactId>error_prone_annotations</artifactId>
-                <version>${errorprone.version}</version>
+                <version>${errorprone.annotations.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.ibm.icu</groupId>
@@ -766,6 +771,7 @@
                 <groupId>org.graalvm.js</groupId>
                 <artifactId>js</artifactId>
                 <version>${graaljs.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.graalvm.js</groupId>
@@ -959,7 +965,7 @@
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
-                <version>3.4.4</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.amazonaws</groupId>
@@ -986,17 +992,6 @@
                 <artifactId>commons-dbcp2</artifactId>
                 <version>2.11.0</version>
             </dependency>
-            <!-- this is relocated to at.yawk.lz4, but license checker script (the one that uses licenses.yaml)
-             complains about stuff (our dependencies) using org.lz4 package, so put this here even though our own
-              packaging doesn't use it directly anymore
-             -->
-            <dependency>
-                <groupId>org.lz4</groupId>
-                <artifactId>lz4-java</artifactId>
-                <version>1.8.1</version>
-            </dependency>
-            <!-- dependency:analyze complains if we don't declare this like this in our own packaging, since this is
-             what org.lz4 is relocated as -->
             <dependency>
                 <groupId>at.yawk.lz4</groupId>
                 <artifactId>lz4-java</artifactId>
@@ -1005,7 +1000,7 @@
             <dependency>
                 <groupId>org.xerial.snappy</groupId>
                 <artifactId>snappy-java</artifactId>
-                <version>1.1.10.7</version>
+                <version>1.1.10.8</version>
             </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
@@ -1091,7 +1086,7 @@
             <dependency>
                 <groupId>com.opencsv</groupId>
                 <artifactId>opencsv</artifactId>
-                <version>4.6</version>
+                <version>5.12.0</version>
             </dependency>
             <dependency>
             <groupId>commons-beanutils</groupId>
@@ -1102,7 +1097,7 @@
             <dependency>
                 <groupId>com.jayway.jsonpath</groupId>
                 <artifactId>json-path</artifactId>
-                <version>2.9.0</version>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.thisptr</groupId>
@@ -1117,7 +1112,7 @@
             <dependency>
                 <groupId>org.roaringbitmap</groupId>
                 <artifactId>RoaringBitmap</artifactId>
-                <version>1.6.14</version>
+                <version>1.6.18</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
@@ -1137,12 +1132,12 @@
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>9.9.1</version>
+                <version>9.10.1</version>
             </dependency>
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-commons</artifactId>
-                <version>9.9.1</version>
+                <version>9.10.1</version>
             </dependency>
             <dependency>
                 <groupId>org.asynchttpclient</groupId>
@@ -1162,7 +1157,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
-                <version>4.5.0</version>
+                <version>4.6.0</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
@@ -1307,7 +1302,7 @@
             <dependency>
                 <groupId>com.github.docker-java</groupId>
                 <artifactId>docker-java-bom</artifactId>
-                <version>3.7.0</version>
+                <version>3.7.1</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -1431,7 +1426,7 @@
             <dependency>
                 <groupId>com.google.j2objc</groupId>
                 <artifactId>j2objc-annotations</artifactId>
-                <version>2.8</version>
+                <version>3.1</version>
             </dependency>
             <dependency>
                 <groupId>io.github.resilience4j</groupId>
@@ -1530,7 +1525,7 @@
           <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value-annotations</artifactId>
-            <version>2.10.1</version>
+            <version>2.12.2</version>
           </dependency>
           <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -1591,7 +1586,7 @@
             <plugin>
                 <groupId>org.openrewrite.maven</groupId>
                 <artifactId>rewrite-maven-plugin</artifactId>
-                <version>5.42.0</version>
+                <version>6.44.0</version>
                 <configuration>
                     <activeRecipes>
                         <recipe>org.apache.druid.RewriteRules</recipe>
@@ -1615,12 +1610,12 @@
                     <dependency>
                         <groupId>org.openrewrite.recipe</groupId>
                         <artifactId>rewrite-apache</artifactId>
-                        <version>1.8.0</version>
+                        <version>2.29.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.openrewrite.recipe</groupId>
                         <artifactId>rewrite-jackson</artifactId>
-                        <version>0.6.0</version>
+                        <version>1.27.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -1858,7 +1853,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>3.6.3</version>
                 <executions>
                     <execution>
                         <id>default-cli</id>
@@ -2036,7 +2031,6 @@
                         <argLine>
                             @{jacocoArgLine}
                             ${jdk.strong.encapsulation.argLine}
-                            ${jdk.security.manager.allow.argLine}
                             -Xmx2048m
                             -XX:MaxDirectMemorySize=2500m
                             -XX:+ExitOnOutOfMemoryError
@@ -2100,7 +2094,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.6.1</version>
+                    <version>3.6.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.scala-tools</groupId>
@@ -2165,20 +2159,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>java-12+</id>
-            <activation>
-                <!-- Security Manager was permanently removed in JDK 24 (JEP 486); this flag is fatal on 24+ -->
-                <jdk>[12,24)</jdk>
-            </activation>
-            <properties>
-                <jdk.security.manager.allow.argLine>
-                  <!-- required for system-rules with Java >= 18 https://github.com/stefanbirkner/system-rules/issues/85 -->
-                  <!-- this option is only available starting in Java 12 -->
-                    -Djava.security.manager=allow
-                </jdk.security.manager.allow.argLine>
-            </properties>
-        </profile>
           <profile>
             <id>strict</id>
             <activation>
@@ -2278,7 +2258,7 @@
                     <plugin>
                         <groupId>org.apache.rat</groupId>
                         <artifactId>apache-rat-plugin</artifactId>
-                        <version>0.15</version>
+                        <version>0.18</version>
                         <executions>
                             <execution>
                                 <phase>verify</phase>
@@ -2376,11 +2356,13 @@
                                 <exclude>.github/workflows/codeql.yml</exclude>
                                 <exclude>.github/config/codeql-config.yml</exclude>
                                 <exclude>git.version</exclude>
-                                <exclude>src/**/*.snap</exclude>
+                                <exclude>**/src/**/*.snap</exclude>
                                 <exclude>examples/conf/**</exclude>
                                 <exclude>.asf.yaml</exclude>
                                 <exclude>**/dependency-reduced-pom.xml</exclude>
-                                <exclude>.editorconfig</exclude>
+                                <exclude>**/.editorconfig</exclude>
+                                <exclude>**/node_modules/**</exclude>
+                                <exclude>**/public/**</exclude>
                                 <exclude>**/hadoop.indexer.libs.version</exclude>
                                 <exclude>**/codegen/**/*</exclude>
                                 <exclude>**/.settings/**/*</exclude> <!-- Eclipse -->
